# sandbox

./: .gitignore  pyproject.toml  requirements.txt
bank_note/: Readme.md  app.py  test_app.py  test_training.py  trainig.py
fast_basic/: Readme.md  app.py  test_blackbox_requests.py  tests_auto_manual.py
notes/: remote_access.py  try_openai_api.py
openai_gpt/src/: query_gpt4.py  test_connection.py
rolodex/db/: db.py  toto.txt
rolodex/rolodex/: contact.py
rolodex/tests/: test_models.py
