[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = "playing around"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.4"}
python-dotenv = "^1.0.1"
uvicorn = "^0.32.0"
requests = "^2.32.3"
sqlmodel = "^0.0.22"
openai = "^1.54.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
ruff = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
